<resources>
    <string name="app_name">HairMasterPlaner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_job_list">Работы</string>
    <string name="menu_customer_list">Список клиентов</string>
    <string name="menu_material_list">Материалы</string>
    <string name="menu_service_list">Услуги</string>
    <string name="menu_job_body">Работа</string>
    <string name="hint_service_item_name">Введите название услуги</string>
    <string name="switch_name">Услуга</string>
    <string name="hint_unit_o_m">Укажите еденицу измерения</string>
    <string name="btnSave_name">Сохранить</string>
    <string name="btn_cancel_name">Отменить</string>
    <string name="services">Услуги</string>
    <string name="materials">Материалы</string>
    <string name="default_price">0 р.</string>
    <string name="price">Цена</string>
    <string name="customer_name">Имя клиента</string>
    <string name="phone_number">Номер телефона</string>
    <string name="toast_msg_success_creating_customer">Клиент успешно создан</string>
    <string name="date_start_header">период с:</string>
    <string name="date_end_header">по:</string>
    <string name="customer_header">Клиент</string>
    <string name="date_header">Дата:</string>
    <string name="hint_enter_amount">уажите количество</string>
    <string name="hint_enter_price">укажите цену</string>
    <string name="hint_choose_customer">Выберите клиента</string>
    <string name="hint_choose_service_or_material">Выберите услугу или материал</string>
    <string name="hint_customer_name">Имя клиента</string>
    <string name="number_in_order_header">№</string>
    <string name="hint_sample_of_date">21.02.2023</string>
    <string name="hint_sample_sum_of_job">5490</string>
    <string name="tv_choose_customer">Выберите клиента</string>
    <string name="toast_msg_amount_added_position"> записей было добавлено</string>
    <string name="hint_enter_material_name">Введите название услуги</string>
    <string name="hint_enter_purchase_price">Введите цену закупки</string>
    <string name="hint_enter_rtl_price">Введите цену продажи</string>
    <string name="error_material_name_should_not_be_empty">Название материала не должно быть пустым</string>

</resources>