<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvOrderNumJobList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/number_in_order_header" />

        <TextView
            android:id="@+id/tvCustomerNameJobListItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/hint_customer_name" />

        <TextView
            android:id="@+id/tvDateOfJob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/hint_sample_of_date" />

        <TextView
            android:id="@+id/tvSumOfJob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_sample_sum_of_job" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>