<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_job_list">

    <fragment
        android:id="@+id/nav_job_list"
        android:name="com.example.hairmasterplaner.ui.jobList.JobListFragment"
        android:label="@string/menu_job_list"
        tools:layout="@layout/fragment_job_list" >


        <action
            android:id="@+id/action_nav_job_list_to_nav_job_body"
            app:destination="@id/nav_job_body" />
        <action
            android:id="@+id/action_nav_job_list_to_nav_customer_list"
            app:destination="@id/nav_customer_list" />
    </fragment>

    <fragment
        android:id="@+id/nav_customer_list"
        android:name="com.example.hairmasterplaner.ui.customerList.CustomerListFragment"
        android:label="@string/menu_customer_list"
        tools:layout="@layout/fragment_customer_list" >
        <action
            android:id="@+id/action_nav_customer_list_to_fragmentCustomerItem"
            app:destination="@id/fragmentCustomerItem" />
        <argument
            android:name="chooseCustomer"
            app:argType="boolean"
             />
        <action
            android:id="@+id/action_nav_customer_list_to_addCustomerFromContacts"
            app:destination="@id/addCustomerFromContacts" />
    </fragment>

    <fragment
        android:id="@+id/nav_service_list"
        android:name="com.example.hairmasterplaner.ui.serviceList.ServiceListFragment"
        android:label="@string/menu_service_list"
        tools:layout="@layout/fragment_service_list" >

        <action
            android:id="@+id/action_nav_service_list_to_ServiceItemFragment"
            app:destination="@id/ServiceItemFragment" />
        <argument
            android:name="choose_job_element"
            app:argType="boolean"/>

    </fragment>

    <fragment
        android:id="@+id/nav_job_body"
        android:name="com.example.hairmasterplaner.ui.jobBodyList.JobBodyFragment"
        android:label="@string/menu_job_body"
        tools:layout="@layout/fragment_job_body" >
        <argument
            android:name="JobItemWithCustomerItem"
            app:argType="com.example.hairmasterplaner.domain.job.JobItemWithCustomer"
            app:nullable="true" />
        <action
            android:id="@+id/action_nav_job_body_to_nav_customer_list"
            app:destination="@id/nav_customer_list" />
        <action
            android:id="@+id/action_nav_job_body_to_myNumKeyboardDialog"
            app:destination="@id/myNumKeyboardDialog" />
        <action
            android:id="@+id/action_nav_job_body_to_nav_job_element_list"
            app:destination="@id/nav_service_list" />
    </fragment>

    <fragment
        android:id="@+id/nav_material_list"
        android:name="com.example.hairmasterplaner.ui.materialList.MaterialListFragment"
        android:label="@string/menu_material_list"
        tools:layout="@layout/fragment_material_list" >
        <action
            android:id="@+id/action_nav_material_list_to_materialItemFragment"
            app:destination="@id/materialItemFragment" />
    </fragment>
    <dialog
        android:id="@+id/ServiceItemFragment"
        android:name="com.example.hairmasterplaner.ui.serviceList.serviceItem.ServiceItemFragment"
        android:label="fragment_job_element_item_editing"
        tools:layout="@layout/fragment_service_item" >

        <argument
            android:name="jobElementItem"
            app:argType="com.example.hairmasterplaner.domain.jobElement.JobElementItem"
            app:nullable="true" />
        <action
            android:id="@+id/action_jobElementItemFragment_to_nav_job_element_list"
            app:destination="@id/nav_service_list" />
    </dialog>
    <fragment
        android:id="@+id/fragmentCustomerItem"
        android:name="com.example.hairmasterplaner.ui.customerList.customerItem.FragmentCustomerItem"
        android:label="FragmentCustomerItem" >
        <action
            android:id="@+id/action_fragmentCustomerItem_to_nav_customer_list"
            app:destination="@id/nav_customer_list" />
        <argument
            android:name="customerItem"
            app:argType="com.example.hairmasterplaner.domain.customer.CustomerItem"
            app:nullable="true" />
    </fragment>
    <dialog
        android:id="@+id/myNumKeyboardDialog"
        android:name="com.example.hairmasterplaner.ui.myNamKeybordDialog.MyNumKeyboardDialog"
        android:label="fragment_my_num_key_board_dialog"
        tools:layout="@layout/fragment_my_num_key_board_dialog" >
        <action
            android:id="@+id/action_myNumKeyboardDialog_to_nav_job_body"
            app:destination="@id/nav_job_body" />
        <argument
            android:name="digitToEdit"
            app:argType="integer" />
    </dialog>
    <fragment
        android:id="@+id/addCustomerFromContacts"
        android:name="com.example.hairmasterplaner.ui.customerList.addCustomerFromContacts.AddCustomerFromContactsFragment"
        android:label="fragment_add_customer_from_contacts"
        tools:layout="@layout/fragment_add_customer_from_contacts" >
        <action
            android:id="@+id/action_addCustomerFromContacts_to_nav_customer_list"
            app:destination="@id/nav_customer_list" />
    </fragment>
    <fragment
        android:id="@+id/materialItemFragment"
        android:name="com.example.hairmasterplaner.ui.materialList.materialItem.MaterialItemFragment"
        android:label="fragment_material_item"
        tools:layout="@layout/fragment_material_item" >
        <action
            android:id="@+id/action_materialItemFragment_to_nav_material_list"
            app:destination="@id/nav_material_list" />
        <argument
            android:name="materialItem"
            app:argType="com.example.hairmasterplaner.domain.materials.MaterialItem"
            app:nullable="true" />
        <action
            android:id="@+id/action_materialItemFragment_to_myNumKeyboardDialog"
            app:destination="@id/myNumKeyboardDialog" />
    </fragment>
</navigation>